added all the data for the learning portion, and incorporated a session to track user activity

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
-<b>Home Page</b>
+<h1>Empower Your Ride:</h1>
+<h4>Learn to Repair Your Bike Tires and Never be Stranded Again!</h4>
+<a href="/learn/1"><button>Start Learning</button></a>
 
 {% endblock %}
