Basic Quiz Changes Added

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,6 +16,7 @@
 
 
   <link rel="stylesheet" href="{{url_for('static', filename='main.css')}}">
+  <script src="{{url_for('static', filename='project.js')}}"></script>
 
 
 
@@ -47,7 +48,3 @@
 
   </body>
 </html>
-
-
-
-
