--- a/templates/quiz_results.html
+++ b/templates/quiz_results.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-<div class="center">
+<div class="center padded">
     <h2>Quiz Results</h2>
     <h2>
         Score: {{score}}/6
