--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<script src="{{url_for('static', filename='project.js')}}"></script>
+<script src="{{url_for('static', filename='quiz.js')}}"></script>
 
 
 <div class="center">
