--- a/templates/learn.html
+++ b/templates/learn.html
@@ -25,9 +25,13 @@
 
 {% if lesson.flashcards %}
 <div class = "row" id = "card_block">
-    <!-- <div class = 'col-6' id='card-col-1'></div>
-    <div class = 'col-6' id='card-col-2'></div> -->
-    <div id="bCard" class="hide"></div>
+    <div class = 'col-6' id='card-col-1'>
+        <div id="bCard" class="hide"></div>
+    </div>
+    <div class = 'col-6' id='card-col-2'>
+        
+    </div>
+    
   
 </div>
 <!-- Loop through flashcards -->
