--- a/static/main.css
+++ b/static/main.css
@@ -95,35 +95,27 @@
 
 /* Flashcards */
 /* CARD BACK & FRONT */
-body, #screenA, #screenB {
-  padding: 0; margin: 0;
-  width: 100vw; height: 100vh;
-  display: flex;
-  /* justify-content: center;
-  align-items: center;
-  flex-direction: column; */
-}
-
 #bCard {
-    width: 80%; height: 60%;
+    height: 300px;
     position: relative;
 }
   
 /* (D2) CARD BACK & FRONT */
 .card { cursor: pointer; }
 .card, .front, .back {
-width: 100%; height: 100%;
-position: absolute;
+    width: 100%; 
+    height: 100%;
+    position: absolute;
 }
 .front, .back {
-display: flex;
-align-items: center;
-justify-content: center;
-text-align: center;
-padding: 20px;
-font-size: 40px;
-border-radius: 10px;
-backface-visibility: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 20px;
+    font-size: 30px;
+    border-radius: 10px;
+    backface-visibility: hidden;
 }
 .front, .mFront {
 color: #2e189a;
