--- a/templates/learn.html
+++ b/templates/learn.html
@@ -25,21 +25,9 @@
 
 {% if lesson.flashcards %}
 <div class = "row" id = "card_block">
-    <div class = 'col-6' id='card-col-1'>
-    </div>
-    <div class = 'col-6' id='card-col-2'>
-        <div id="bCard" class="hide"></div>
-        
-    </div>
-    
-  
+    <div class = 'col-6' id='card-col-1'></div>
+    <div class = 'col-6' id='card-col-2'></div>  
 </div>
-<!-- Loop through flashcards -->
-  <!-- {% for flashcard in lesson.flashcards %}
-    <p>{{ flashcard.title }}</p>
-    <img src="{{ flashcard.image_url }}" alt="Flashcard Image">
-    <p>{{ flashcard.text }}</p>
-  {% endfor %} -->
 {%endif%}
 
 
@@ -80,6 +68,9 @@
  </div>
 {% endfor %}
 
+<br>
+<br>
+<br>
 
 <!-- previous and next buttons -->
 <div class = "fixed-bottom grey padd-vert">
