--- a/templates/learn.html
+++ b/templates/learn.html
@@ -31,15 +31,17 @@
 {%endif%}
 
 
-<!-- {%if "Self Check" in lesson.title %}
-{% include "checkbox.html" %}
-{%else%}
-{{lesson.body}}<br>
-{%endif%} -->
+{%if lesson.self_check %}
+<div class="row">
+    <div class = "offset-md-1 col-10">
+        {% include "checkbox.html" %}
+    </div>
+</div>
+{%endif%}
 
 
 {% if lesson.image %}
-<img src="{{ lesson.image }}" alt="main image">
+    <img src="{{ lesson.image }}" alt="main image">
 {%endif%}
 
 <!-- Loop through audio clips -->
@@ -62,7 +64,7 @@
 {% endfor %}
 
  <!-- Loop through images -->
- {% for tool in lesson.tools %}
+{% for tool in lesson.tools %}
  <div>
      <img src="{{ tool.image_url }}" alt="Tool Image">
  </div>
