--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,28 @@
 {% extends "layout.html" %}
 
 {% block content %}
+<div class="row">
+    <div class = "col-12">
+		<h1 class="center">Empower Your Ride</h1>
+	</div>
+</div>
 
-<h1>Empower Your Ride:</h1>
-<h4>Learn to Repair Your Bike Tires and Never be Stranded Again!</h4>
-<a href="/learn/1"><button>Start Learning</button></a>
+<br>
+<br>
 
+<div class="row">
+    <div class = "col">
+		<h4 class = "center">Learn to Repair Your Bike Tires and Never be Stranded Again!</h4>
+	</div>
+</div>
+
+<br>
+<br>
+<br>
+
+<div class = "row padd-vert justify-content-md-center">
+	<div class = "col">
+		<a class="btn btn-primary btn-lg btn-block" href="/learn/1" role = "button">Start Learning</a>
+	</div>
+</div>	
 {% endblock %}
