--- a/templates/learn.html
+++ b/templates/learn.html
@@ -41,7 +41,14 @@
 
 
 {% if lesson.image %}
-    <img src="{{ lesson.image }}" alt="main image">
+    <div class="row justify-content-center">
+        <div class="col-auto">
+          <!-- Your centered content goes here -->
+          <img class="main-img" src="{{ lesson.image }}" alt="main image">
+        </div>
+              
+    </div>
+    
 {%endif%}
 
 {%if lesson.audio_clips %}
@@ -75,12 +82,17 @@
 {%endif%}
 
 
- <!-- Loop through images -->
-{% for tool in lesson.tools %}
- <div>
-     <img src="{{ tool.image_url }}" alt="Tool Image">
- </div>
-{% endfor %}
+<div class="container">
+    <div class="row">
+      {% for tool in lesson.tools %}
+        <div class="col-md-6 col-lg-3">
+          <div class="draggable-container">
+            <img data-tool-id="{{ tool.id }}" data-match="{{ tool.match_id }}" data-feedback="{{tool.feedback}}" class="tool-img" src="{{ tool.image_url }}" alt="Tool Image">
+          </div>
+        </div>
+      {% endfor %}
+    </div>
+  </div>
 
 <br>
 <br>
