--- a/static/main.css
+++ b/static/main.css
@@ -209,5 +209,36 @@
     background-color: lightgreen; /* Change to the desired highlight color */
 }
 
+.img-div {
+    width: 300px; /* Adjust as needed */
+    border: 1px solid #3f3c3c;
+    border-radius: 8px;
+    overflow: hidden;
+    margin-bottom: 20px; /* Adjust spacing between img-divs */
+    text-align: center; /* Center-align content */
+    padding-top: 20px;
+    margin-top: 30px;
+}
+
+.img-div-img {
+    padding-top: 10px;
+    width: 80%;
+    height: auto;
+    display: block; /* To center the image */
+    margin: 0 auto; /* To center the image horizontally */
+}
+
+.img-div-body {
+    padding: 20px;
+}
+
+.img-div-title {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    text-align: center; /* Center-align title */
+}
+
+
   
   
