--- a/templates/layout.html
+++ b/templates/layout.html
@@ -34,7 +34,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link" href="/learn/1">Learn</a>
-            <a class="nav-link" href="/quiz/1">Quiz</a>
+            <a class="nav-link" href="/quiz/start">Quiz</a>
           </div>
         </div>
       </div>
