--- a/templates/home.html
+++ b/templates/home.html
@@ -16,13 +16,23 @@
 	</div>
 </div>
 
-<br>
-<br>
-<br>
 
 <div class = "row padd-vert justify-content-md-center">
-	<div class = "col">
-		<a class="btn btn-primary btn-lg btn-block" href="/learn/1" role = "button">Start Learning</a>
-	</div>
+	<div class="img-div">
+        <a href="/learn/1">
+            <img src="https://www.wikihow.com/images/thumb/8/8f/Fix-a-Bike-Tire-Step-19-Version-2.jpg/v4-460px-Fix-a-Bike-Tire-Step-19-Version-2.jpg.webp" class="img-div-img" alt="Image Description">
+            <div class="img-div-body">
+                <h5 class="img-div-title">Start Learning</h5>
+            </div>
+        </a>
+    </div>
+	<div class="img-div">
+        <a href="/quiz/start">
+            <img src="https://cdn-icons-png.flaticon.com/512/124/124727.png" class="img-div-img" alt="Image Description">
+            <div class="img-div-body">
+                <h5 class="img-div-title">Test Yourself</h5>
+            </div>
+        </a>
+    </div>
 </div>	
 {% endblock %}
