--- a/templates/quiz_start.html
+++ b/templates/quiz_start.html
@@ -20,7 +20,7 @@
 <div class = "row padd-vert justify-content-md-center">
 	<div class="img-div">
         <a href="/quiz/1">
-            <img src="https://www.wikihow.com/images/thumb/8/8f/Fix-a-Bike-Tire-Step-19-Version-2.jpg/v4-460px-Fix-a-Bike-Tire-Step-19-Version-2.jpg.webp" class="img-div-img" alt="Image Description">
+            <img src="https://cdn-icons-png.flaticon.com/512/124/124727.png" class="img-div-img" alt="Image Description">
             <div class="img-div-body">
                 <h5 class="img-div-title">Start Quiz</h5>
             </div>
