--- a/templates/home.html
+++ b/templates/home.html
@@ -27,7 +27,7 @@
         </a>
     </div>
 	<div class="img-div">
-        <a href="/quiz/start">
+        <a href="/quiz/1">
             <img src="https://cdn-icons-png.flaticon.com/512/124/124727.png" class="img-div-img" alt="Image Description">
             <div class="img-div-body">
                 <h5 class="img-div-title">Test Yourself</h5>
