--- a/static/main.css
+++ b/static/main.css
@@ -243,9 +243,6 @@
     padding-top: 20px;
 }
 
-.incorrect-answer{
-    background-color: lightcoral;
-}
 
 .icon{
     height: 25px;
@@ -253,3 +250,12 @@
     margin-right: 30px;
 }
   
+.feedback {
+    font-size: 14px;
+    color: #333;
+    background-color: lightgreen;
+    padding: 10px;
+    margin-top: 10px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
