--- a/templates/quiz_results.html
+++ b/templates/quiz_results.html
@@ -14,7 +14,25 @@
     <h4>You Passed!!</h4>
 {% endif %}
 
-    <a href="/clear_session"><button class="mt-4 btn btn-primary">Return Home</button></a>
+</div>
+
+<div class = "row padd-vert justify-content-md-center">
+	<div class="img-div">
+        <a href="/clear_session">
+            <img src="https://cdn-icons-png.flaticon.com/512/25/25694.png" class="img-div-img" alt="Image Description">
+            <div class="img-div-body">
+                <h5 class="img-div-title">Return Home</h5>
+            </div>
+        </a>
+    </div>
+	<div class="img-div">
+        <a href="/quiz/retake">
+            <img src="https://cdn-icons-png.flaticon.com/512/124/124727.png" class="img-div-img" alt="Image Description">
+            <div class="img-div-body">
+                <h5 class="img-div-title">Retake Quiz</h5>
+            </div>
+        </a>
+    </div>
 </div>
 
 
