fixed quiz retake logic

--- a/templates/quiz_results.html
+++ b/templates/quiz_results.html
@@ -26,7 +26,7 @@
         </a>
     </div>
 	<div class="img-div">
-        <a href="/quiz/retake">
+        <a href="/quiz/start">
             <img src="https://cdn-icons-png.flaticon.com/512/124/124727.png" class="img-div-img" alt="Image Description">
             <div class="img-div-body">
                 <h5 class="img-div-title">Retake Quiz</h5>
