--- a/templates/quiz_start.html
+++ b/templates/quiz_start.html
@@ -19,7 +19,7 @@
 
 <div class = "row padd-vert justify-content-md-center">
 	<div class="img-div">
-        <a href="/quiz/1">
+        <a href="/quiz/1" class="custom-link">
             <img src="https://cdn-icons-png.flaticon.com/512/124/124727.png" class="img-div-img" alt="Image Description">
             <div class="img-div-body">
                 <h5 class="img-div-title">Start Quiz</h5>
