--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,16 +23,16 @@
 
     <title>How To Repair A Bike Tire</title>
   </head>
-  <body>
+  <body class = "baseColor">
      
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container">
+    <nav class="navbar navbar-expand-lg accentColor">
+      <div class="container textWhite">
         <a class="navbar-brand" href="/">Home</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
+          <div class="navbar-nav textWhite">
             <a class="nav-link" href="/learn/1">Learn</a>
             <a class="nav-link" href="/quiz/start">Quiz</a>
           </div>
