--- a/templates/layout.html
+++ b/templates/layout.html
@@ -25,16 +25,16 @@
   </head>
   <body>
      
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="accent navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" href="/">Home</a>
+        <a class="navbar-brand light" href="/">Home</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" href="/learn/1">Learn</a>
-            <a class="nav-link" href="/quiz/start">Quiz</a>
+            <a class="light nav-link" href="/learn/1">Learn</a>
+            <a class="light nav-link" href="/quiz/start">Quiz</a>
           </div>
         </div>
       </div>
@@ -42,7 +42,7 @@
 
     <br>
 
-    <div class="container">   
+    <div class="container base">   
         {% block content %}
         {% endblock %}
     </div>
