--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -66,11 +66,11 @@
         <button class="mt-4 standard btn btn-primary">Previous</button>
     </a>
     {% endif %}
-    <button id="checkButton" class="mt-4 btn btn-success" {% if answered_question %}disabled{% endif %} onclick="checkAnswers()">Check Answers</button>
+    <button id="checkButton" class="mt-4 btn btn-success" {% if answered_question %}disabled{% endif %} onclick="checkAnswers()">Submit</button>
     {% if question['quiz_id'] != 6 %}
-    <a href="/quiz/{{question['quiz_id']+1}}">
-        <button class="mt-4 standard btn btn-primary">Next</button>
-    </a>
+        <a id="nextButton" {%if not answered_question %}class='hide' {% endif %} href="/quiz/{{question['quiz_id']+1}}">
+            <button class="mt-4 standard btn btn-primary">Next</button>
+        </a>
     {%else%}
     <a href="/quiz/results">
         <button class="mt-4 standard btn btn-primary">View Results</button>
