--- a/templates/quiz_results.html
+++ b/templates/quiz_results.html
@@ -14,10 +14,10 @@
     <div class="padd-vert">
         {% if score < 5 %}
         <img class="pass-fail-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSwz-VqFzWO5E7wzbCf-aZ-qoLO498LfpXSM1pEWyGOih8MGpvVUI-ahw66DHuUsCNlEkQ&usqp=CAU">
-        <h4>Sorry, you didn't pass</h4>
+        <h4 class="dark">Sorry, you didn't pass</h4>
         {% else %}
             <img class="pass-fail-img" src="https://png.pngtree.com/png-vector/20221215/ourmid/pngtree-green-check-mark-png-image_6525691.png">
-            <h4>Nice Job, you passed!</h4>
+            <h4 class="dark">Nice Job, you passed!</h4>
         {% endif %}
     </div>
    
@@ -26,7 +26,7 @@
 
 <div class = "row padd-vert justify-content-md-center">
     <div class="row justify-content-md-center">
-        <div class="img-div">
+        <div class="accent img-div">
             <a href="/clear_session" class="custom-link">
                 <img src="https://cdn-icons-png.flaticon.com/512/25/25694.png" class="img-div-img" alt="Image Description">
                 <div class="img-div-body">
@@ -34,7 +34,7 @@
                 </div>
             </a>
         </div>
-        <div class="img-div">
+        <div class="accent img-div">
             <a href="/quiz/start" class="custom-link">
                 <img src="https://cdn-icons-png.flaticon.com/512/124/124727.png" class="img-div-img" alt="Image Description">
                 <div class="img-div-body">
