--- a/templates/quiz_start.html
+++ b/templates/quiz_start.html
@@ -12,13 +12,13 @@
 
 <div class="row">
     <div class = "col">
-		<h4 class = "center">Test your knowledge and learn valuable skills to fix your bike tires like a pro.</h4>
+		<h4 class = "dark center">Test your knowledge and learn valuable skills to fix your bike tires like a pro.</h4>
 	</div>
 </div>
 
 
 <div class = "row padd-vert justify-content-md-center">
-	<div class="img-div">
+	<div class="accent img-div">
         <a href="/quiz/1" class="custom-link">
             <img src="https://cdn-icons-png.flaticon.com/512/124/124727.png" class="img-div-img" alt="Image Description">
             <div class="img-div-body">
