--- a/templates/quiz_results.html
+++ b/templates/quiz_results.html
@@ -4,7 +4,9 @@
 
 
 <div class="center">
-    <div class="padd-vert"><h1>Quiz Results</h1></div>
+    <div class="padd-vert">
+        <h1>Quiz Results</h1>
+    </div>
     <div class="padd-vert">
         <h2>
             Score: {{score}}/6
