--- a/templates/home.html
+++ b/templates/home.html
@@ -3,11 +3,10 @@
 {% block content %}
 <div class="row">
     <div class = "col-12">
-		<h1 class="center">Empower Your Ride</h1>
+		<h1>Empower Your Ride</h1>
 	</div>
 </div>
 
-<br>
 <br>
 
 <div class="row">
@@ -19,19 +18,19 @@
 
 <div class = "row padd-vert justify-content-md-center">
     <div class="row justify-content-md-center">
-        <div class="accent img-div">
+        <div class="img-div textWhite">
             <a href="/learn/1" class="custom-link">
                 <img src="https://www.wikihow.com/images/thumb/8/8f/Fix-a-Bike-Tire-Step-19-Version-2.jpg/v4-460px-Fix-a-Bike-Tire-Step-19-Version-2.jpg.webp" class="img-div-img" alt="Image Description">
                 <div class="img-div-body">
-                    <h5 class="light img-div-title">Start Learning</h5>
+                    <h5 class="img-div-title">Start Learning</h5>
                 </div>
             </a>
         </div>
-        <div class="accent img-div">
+        <div class="img-div textWhite">
             <a href="/quiz/1" class="custom-link">
                 <img src="https://cdn-icons-png.flaticon.com/512/124/124727.png" class="img-div-img" alt="Image Description">
                 <div class="img-div-body">
-                    <h5 class="light img-div-title">Test Yourself</h5>
+                    <h5 class="img-div-title">Test Yourself</h5>
                 </div>
             </a>
         </div>
