--- a/templates/learn.html
+++ b/templates/learn.html
@@ -11,13 +11,11 @@
 <!-- basic page info. -->
 <div class="row">
     <div class = "col-12">
-        <h1 id = "lesson_title" class="center"></h1>
+        <h1 id = "lesson_title"></h1>
     </div>
 </div>
 
 <br>
-<br>
-
 <div class="row">
     <div class = "offset-md-1 col-10">
         <p id = "lesson_body" class = "body text-justify"></p>
