--- a/templates/quiz_start.html
+++ b/templates/quiz_start.html
@@ -2,9 +2,7 @@
 
 {% block content %}
 <div class="row">
-    <div class = "col-12">
-		<h1 class="center">Bike Tire Repair Quiz</h1>
-	</div>
+    <h1>Bike Tire Repair Quiz</h1>
 </div>
 
 <br>
