--- a/static/main.css
+++ b/static/main.css
@@ -10,7 +10,7 @@
 body
 {
     background-color: #9FC5E8!important;
-}
+} 
 
 .light
 {
@@ -29,7 +29,7 @@ body
 
 .standard
 {
-    width: 8rem;
+    width: 6rem;
 }
 
 .padded
@@ -87,29 +87,6 @@ body
 
 .padd-vert
 {
-	padding-top: 3px;
-	padding-bottom: 3px;
-}
-
-html * {
-    font-family: 
-        /* Garamond, */
-        Baskerville,
-        /* Baskerville Old Face, */
-        Hoefler Text,
-        Times New Roman,
-        serif;
-    font-style: normal;
-    font-variant: normal;
-}
-
-h1{
-    font-weight: 700;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-items: center;
-    text-align: center;
 	padding-top: 3px;
 	padding-bottom: 3px;
 }
@@ -203,7 +180,7 @@ h1{
 }
 
 .front {
-    color: #2e189a;
+    color: #012169;
     background: #fff;
 }
 
@@ -216,7 +193,7 @@ h1{
 .back
 {
     color: #fff;
-    background: #2e189a;
+    background: #012169;
 }
 
 .back
@@ -277,7 +254,7 @@ h1{
     padding-top: 20px;
     margin-top: 50px;
     margin-right: 20px;
-    background-color: #4285f4ff;
+    background-color: rgba(236, 233, 233, 0.454);
 }
 
 .img-div-img {
@@ -293,6 +270,7 @@ h1{
 }
 
 .img-div-title {
+    font-size: 18px;
     font-weight: bold;
     margin-bottom: 10px;
     text-align: center; /* Center-align title */
