--- a/templates/learn.html
+++ b/templates/learn.html
@@ -18,7 +18,7 @@
 <br>
 <div class="row">
     <div class = "offset-md-1 col-10">
-        <p id = "lesson_body" class = "body text-justify"></p>
+        <p id = "lesson_body" class = "body dark text-justify"></p>
     </div>
 </div>
 
@@ -106,11 +106,11 @@
             {%endif%}
         </div>
 
-        <div class = "col">
+        <div class = "col textWhite">
             {% if lesson.next_lesson == "end" %}
-                <a class="btn btn-primary btn-lg btn-block" href="/quiz/start" role="button" id = "btn-next-is-quiz">Next</a>
+                <a class="btn accentColor btn-lg btn-block" href="/quiz/start" role="button" id = "btn-next-is-quiz">Next</a>
             {% else %}
-                <a class="btn btn-primary btn-lg btn-block" href="/learn/{{lesson.next_lesson}}" role="button"id = "btn-next">Next</a>
+                <a class="btn accentColor btn-lg btn-block" href="/learn/{{lesson.next_lesson}}" role="button"id = "btn-next">Next</a>
             {%endif%}
         </div>
     </div>
