--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,11 +11,11 @@
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>  
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
 
 
-  <link rel="stylesheet" href="{{url_for('static', filename='main.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='main.css')}}">
 
 
 
@@ -23,6 +23,7 @@
 
     <title>How To Repair A Bike Tire</title>
   </head>
+  
   <body class = "baseColor">
      
     <nav class="navbar navbar-expand-lg accentColor">
@@ -43,7 +44,7 @@
 
     <br>
 
-    <div class="container baseColor">   
+    <div class="container">   
         {% block content %}
         {% endblock %}
     </div>
