--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="row">
     <div class = "col-12">
-		<h1>Empower Your Ride</h1>
+		<h1 class="center">Empower Your Ride</h1>
 	</div>
 </div>
 
