--- a/templates/quiz_results.html
+++ b/templates/quiz_results.html
@@ -8,7 +8,7 @@
         <h1>Quiz Results</h1>
     </div>
     <div class="padd-vert">
-        <h2>
+        <h2 class="custom-bold">
             Score: {{score}}/6
         </h2>
     </div>
