--- a/templates/quiz_start.html
+++ b/templates/quiz_start.html
@@ -2,7 +2,10 @@
 
 {% block content %}
 <div class="row">
-    <h1>Bike Tire Repair Quiz</h1>
+    <div class="col-12">
+        <h1 class="center">Bike Tire Repair Quiz</h1>
+    </div>
+   
 </div>
 
 <br>
