--- a/static/main.css
+++ b/static/main.css
@@ -243,10 +243,12 @@ html * {
 .tool-img{
     height: 100px;
     width: 100px;
+    border-radius: 10px;
 }
 .main-img{
     height: 400px;
     width: 300px;
+    border-radius: 10px;
 }
 .success-match{
     background-color: lightgreen; /* Change to the desired highlight color */
@@ -317,3 +319,44 @@ html * {
 #lesson_body{
     font-size: 20px;
 }
+
+/* Hide the default checkboxes */
+input[type="checkbox"] {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    width: 20px;
+    height: 20px;
+    border: 2px solid #999;
+    border-radius: 3px;
+    outline: none;
+    cursor: pointer;
+    position: relative; /* Needed for the checkmark positioning */
+  }
+  
+  /* Checked state */
+  input[type="checkbox"]:checked {
+    background-color: #007bff;
+    border-color: #007bff;
+  }
+  
+  /* Custom checkmark */
+  input[type="checkbox"]::after {
+    content: '\2713'; /* Unicode character for checkmark */
+    font-size: 14px;
+    color: #fff;
+    display: block;
+    text-align: center;
+    line-height: 18px;
+    visibility: hidden;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+  /* Show custom checkmark when checked */
+  input[type="checkbox"]:checked::after {
+    visibility: visible;
+  }
+  
