--- a/templates/checkbox.html
+++ b/templates/checkbox.html
@@ -7,7 +7,7 @@
                 {% if results[loop.index | string] == 'Correct' %}
                 <img class="icon" src="https://cdn-icons-png.flaticon.com/128/14090/14090371.png" alt="Correct">
                 {% elif results[loop.index | string] == 'Incorrect' %}
-                    <img class="icon" src="https://i.pinimg.com/736x/b5/e4/ed/b5e4edf4cb4ee7535e7f7b1bf969fa63.jpg" alt="Incorrect">
+                    <img class="icon" src="https://image.similarpng.com/very-thumbnail/2020/09/Incorrect-sign-icon-on-transparent-background-PNG.png" alt="Incorrect">
                 {%endif%}
                 
                 <input class="checkbox" name="sentence" type="checkbox" value="{{ loop.index }}" id="{{ loop.index }}" {% if loop.index|string in selected_sentences %} checked {% endif %}>
