--- a/static/main.css
+++ b/static/main.css
@@ -62,6 +62,16 @@ html * {
     background-color: #012169;
 }
 
+.darkBlue:hover{
+    color: rgb(189, 189, 189);
+    text-decoration: none
+}
+
+.darkBlue:active {
+    color: rgb(189, 189, 189);
+    text-decoration: none; 
+}
+
 .textWhite {
     color: rgb(232, 232, 232)
 }
@@ -69,6 +79,8 @@ html * {
 .textWhite >*{
     color: rgb(232, 232, 232)
 }
+
+
 
 .grey
 {
