--- a/templates/learn.html
+++ b/templates/learn.html
@@ -75,7 +75,7 @@
             <ul id = "word-bank" class="gallery ui-helper-reset ui-helper-clearfix"></ul>
         </div>
         {% else %}
-        <div class="col" id="audio-practice"></div>
+        <div class="container" id="audio-practice"></div>
         {%endif%}
     </div>
     {%if lesson.skill_check %}
